--- a/churn-predictor-app/templates/layout.html
+++ b/churn-predictor-app/templates/layout.html
@@ -33,7 +33,7 @@
       <h1 class="title is-size-3-tablet is-size-4-mobile has-text-centered	">
         <i class="fas fa-file-medical-alt"></i>
         <!-- TODO: Change to your own app name. -->
-        Breast Cancer Classifier
+        Customer Churn Classifier
       </h1>
 
       {% block content %}{% endblock %}
@@ -47,8 +47,7 @@
 
       <p class="disclaimer is-size-7">
         <em>
-          * Note that this tool is for informational purposes only and does not
-            constitute medical advice. Please consult your doctor.
+          * Note that this tool is for educational purposes only.
         </em>
       </p>
     </div>
